Added name to index

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
+    <h1 id="birthday-name">Teresiña ❤️</h1>
     <h1 id="head">Cuenta atrás para tu cumpleaños 🎂:</h1>
     <p id="extra-data">(Fuera del trabajo)</p>
     <ul>
