Added gift link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
       </div>
       <div class="box"></div>
     </div>
+  </div>
+  <div id="gift">
+    <p id="gift-phrase">¡Espero que te encante!</p>
+    <a id="gift-link" href="https://adrianp25.github.io/gift/" target="_blank">👉 &nbsp; Regalito &nbsp; 👈</a>
+  </div>
 </body>
 <script src="scripts/confetti.min.js" charset="utf-8"></script>
 <script src="scripts/index.js" charset="utf-8"></script>
